Initial Java project commit